--- a/pypicloud/static/partial/package.html
+++ b/pypicloud/static/partial/package.html
@@ -42,6 +42,7 @@
           <tr>
             <th>Package</th>
             <th>Version</th>
+            <th>Origin</th>
             <th>Uploaded</th>
           </tr>
         </thead>
@@ -53,6 +54,9 @@
             </td>
             <td>
               {{ package.version }}
+            </td>
+            <td>
+              {{ package.origin }}
             </td>
             <td>
               {{ package.last_modified * 1000 | date:'yyyy-MM-dd HH:mm' }}
